@@ -2,47 +2,40 @@ package org.fluentcodes.projects.elasticobjects.models;
 
 import org.assertj.core.api.Assertions;
 import org.fluentcodes.projects.elasticobjects.EoRoot;
-import org.fluentcodes.projects.elasticobjects.exceptions.EoInternalException;
+import org.fluentcodes.projects.elasticobjects.exceptions.EoException;
 import org.fluentcodes.projects.elasticobjects.testitemprovider.IModelConfigCreateTests;
-import org.fluentcodes.projects.elasticobjects.testitemprovider.ProviderConfigMaps;
-import org.fluentcodes.projects.elasticobjects.testitemprovider.ProviderConfigMapsDev;
-import org.junit.Ignore;
+import org.fluentcodes.projects.elasticobjects.testitemprovider.ObjectProvider;
 import org.junit.Test;
 
 import java.util.ArrayList;
 import java.util.Date;
 import java.util.List;
-import java.util.Map;
 
 import static org.fluentcodes.projects.elasticobjects.models.ConfigBean.F_AUTHOR;
-import static org.fluentcodes.projects.elasticobjects.models.ConfigBean.F_CREATION_DATE;
-import static org.fluentcodes.projects.elasticobjects.models.ConfigBean.F_ID;
-import static org.fluentcodes.projects.elasticobjects.models.ConfigBean.F_NATURAL_ID;
 import static org.fluentcodes.projects.elasticobjects.models.ConfigBean.F_CONFIG_MODEL_KEY;
+import static org.fluentcodes.projects.elasticobjects.models.ConfigBean.F_CREATION_DATE;
 import static org.fluentcodes.projects.elasticobjects.models.ConfigBean.F_EXPOSE;
+import static org.fluentcodes.projects.elasticobjects.models.ConfigBean.F_ID;
 import static org.fluentcodes.projects.elasticobjects.models.ConfigBean.F_MODULE;
 import static org.fluentcodes.projects.elasticobjects.models.ConfigBean.F_MODULE_SCOPE;
+import static org.fluentcodes.projects.elasticobjects.models.ConfigBean.F_NATURAL_ID;
 import static org.fluentcodes.projects.elasticobjects.models.ConfigBean.F_SCOPE;
-import static org.fluentcodes.projects.elasticobjects.models.FieldBeanProperties.F_FIELD_NAME;
 import static org.fluentcodes.projects.elasticobjects.models.FieldBeanProperties.F_FINAL;
-import static org.fluentcodes.projects.elasticobjects.models.ModelConfig.MODEL_KEY;
+import static org.fluentcodes.projects.elasticobjects.models.ModelBeanProperties.F_ABSTRACT;
+import static org.fluentcodes.projects.elasticobjects.models.ModelConfig.F_MODEL_KEY;
+import static org.fluentcodes.projects.elasticobjects.models.ModelConfig.F_SUPER_KEY;
 import static org.fluentcodes.projects.elasticobjects.models.ModelConfig.PACKAGE_PATH;
-import static org.fluentcodes.projects.elasticobjects.models.ModelConfig.SUPER_KEY;
 import static org.fluentcodes.projects.elasticobjects.models.ModelInterface.SHAPE_TYPE;
+import static org.fluentcodes.projects.elasticobjects.testitemprovider.ObjectProvider.createModelBean;
+import static org.fluentcodes.projects.elasticobjects.testitemprovider.ObjectProvider.createModelBeanWithFieldKey;
+import static org.fluentcodes.projects.elasticobjects.testitemprovider.ObjectProvider.createModelBeanWithFieldProperty;
+import static org.fluentcodes.projects.elasticobjects.testitemprovider.ObjectProvider.createModelBeanWithProperty;
 import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertNotNull;
+import static org.junit.Assert.assertNull;
+import static org.junit.Assert.assertTrue;
 
 public class ModelBeanTest implements IModelConfigCreateTests {
-
-    public static ModelBean createModelBean(final String fieldName, final Object value) {
-        final String serialized = "{     \"" + F_FIELD_NAME + "\": {\n" +
-                "        \"" + fieldName + "\": " + value + "\n" +
-                "      }\n}}";
-        EoRoot root = ProviderConfigMapsDev.createEo(serialized);
-        Map<String, Object> beanMap = (Map<String, Object>) root.get();
-        Map<String, Object> propertyFieldMap = (Map<String, Object>) beanMap.get(F_FIELD_NAME);
-        ModelBean modelBean = new ModelBean(propertyFieldMap);
-        return modelBean;
-    }
 
     @Override
     public Class<?> getModelConfigClass() {
@@ -68,162 +61,118 @@ public class ModelBeanTest implements IModelConfigCreateTests {
     }
 
     @Test
-    public void empty__toString__BEAN() {
-        ModelBean model = new ModelBean();
-        Assertions.assertThat(model.toString()).isEqualTo("(null)null");
+    public void createModelBeanWithFieldKey_module() {
+        ModelBean bean = createModelBeanWithFieldKey("fieldKey", F_MODULE, "moduleValue");
+        assertNotNull(bean.getFields());
+        assertNotNull(bean.getFieldBean("fieldKey"));
+        assertEquals("moduleValue", bean.getFieldBean("fieldKey").getModule());
     }
 
     @Test
-    public void Model__toString__BEAN_Model() {
-        ModelBean model = new ModelBean("Model");
-        Assertions.assertThat(model.toString()).isEqualTo("(null)Model");
+    public void createModelBeanWithFieldProperty_final() {
+        ModelBean bean = createModelBeanWithFieldProperty(F_MODEL_KEY, F_FINAL, true);
+        assertNotNull(bean.getFields());
+        assertNotNull(bean.getFieldBean(F_MODEL_KEY));
+        assertTrue(bean.getFieldBean(F_MODEL_KEY).getProperties().getFinal());
     }
 
     @Test
-    public void modelKey_Model__toString__BEAN_Model() {
-        ModelBean model = new ModelBean();
-        model.setModelKey("Model");
-        Assertions.assertThat(model.toString()).isEqualTo("(null)null");
+    public void createModelBeanWithProperty_abstract() {
+        ModelBean bean = createModelBeanWithProperty(F_ABSTRACT, true);
+        assertNotNull(bean.getProperties());
+        assertTrue(bean.getProperties().getAbstract());
     }
 
     @Test
-    public void naturalId_Model__toString__BEAN_Model() {
-        ModelBean model = new ModelBean();
-        model.setNaturalId("Model");
-        Assertions.assertThat(model.toString()).isEqualTo("(null)Model");
-    }
-
-    @Test
-    public void set_ShapeTypes_LIST__getShapeType__LIST() {
-        ModelBean modelBean = new ModelBean();
-        modelBean.setShapeType(ShapeTypes.LIST);
-        Assertions.assertThat(modelBean.getShapeType()).isEqualTo(ShapeTypes.LIST);
-    }
-
-    @Test
-    public void set_ShapeTypes_LIST__properties_get_ShapeType__LIST() {
-        ModelBean modelBean = new ModelBean();
-        modelBean.setShapeType(ShapeTypes.LIST);
-        Assertions.assertThat(modelBean.getShapeType()).isEqualTo(ShapeTypes.LIST);
-    }
-
-    @Test
-    public void eo_set_ShapeTypes_LIST__get_ShapeType__LIST() {
-        EoRoot eo = ProviderConfigMaps.createEo(new ModelBean());
+    public void eo_set_ShapeTypes_LIST() {
+        EoRoot eo = ObjectProvider.createEo(new ModelBean());
         eo.set(ShapeTypes.LIST, SHAPE_TYPE);
         Assertions.assertThat(eo.get(SHAPE_TYPE)).isEqualTo(ShapeTypes.LIST);
     }
 
     @Test
-    public void empty__setFinal_true__isFinal_true() {
-        ModelBean modelBean = new ModelBean();
-        modelBean.getProperties().setFinal(true);
-        Assertions.assertThat(modelBean.getProperties().isFinal()).isTrue();
-    }
-
-    @Test
-    public void empty__addField_test__getFieldBean_not_null() {
-        ModelBean modelBean = new ModelBean();
-        modelBean.addField("test");
-        Assertions.assertThat(modelBean.getFieldBean("test")).isNotNull();
-    }
-
-    @Test
-    public void ArrayListList__isList__true() {
-        ModelBean modelBean = new ModelBean(ArrayList.class, ShapeTypes.LIST);
-        Assertions.assertThat(modelBean.getShapeType()).isEqualTo(ShapeTypes.LIST);
-    }
-
-    @Test
-    public void testModelKey() {
-        ModelBean modelBean = createModelBean(MODEL_KEY, "\"FieldBeanInterfaces\"");
+    public void createModelBean_modelKey() {
+        ModelBean modelBean = createModelBean(F_MODEL_KEY, "FieldBeanInterfaces");
         assertEquals("FieldBeanInterfaces", modelBean.getModelKey());
     }
 
     @Test
-    public void testShapeType() {
-        ModelBean modelBean = createModelBean(SHAPE_TYPE, "\"STRING\"");
+    public void createModelBean_shapeType() {
+        ModelBean modelBean = createModelBean(SHAPE_TYPE, "STRING");
         assertEquals(ShapeTypes.STRING, modelBean.getShapeType());
     }
 
     @Test
-    public void testSuperKey() {
-        ModelBean modelBean = createModelBean(SUPER_KEY, "\"FieldBeanInterfaces\"");
+    public void createModelBean_superKey() {
+        ModelBean modelBean = createModelBean(F_SUPER_KEY, "FieldBeanInterfaces");
         assertEquals("FieldBeanInterfaces", modelBean.getSuperKey());
     }
 
-    @Test
-    public void testSuperKeyNull() {
-        ModelBean modelBean = createModelBean(SUPER_KEY, null);
-        assertEquals(null, modelBean.getSuperKey());
+    @Test(expected = EoException.class)
+    public void createModelBean_superKeyNull() {
+        ModelBean modelBean = createModelBean(F_SUPER_KEY, null);
     }
 
     @Test
-    public void testPackagePath() {
-        ModelBean modelBean = createModelBean(PACKAGE_PATH, "\"org.fluentcodes.projects.exlasticobjects\"");
-        assertEquals("org.fluentcodes.projects.exlasticobjects", modelBean.getPackagePath());
+    public void createModelBean_packagePath() {
+        ModelBean modelBean = createModelBean(PACKAGE_PATH, "org.fluentcodes.projects.elasticobjects");
+        assertEquals("org.fluentcodes.projects.elasticobjects", modelBean.getPackagePath());
     }
 
     @Test
-    public void testConfigModelKey() {
-        ModelBean modelBean = createModelBean(F_CONFIG_MODEL_KEY, "\"CONFIG\"");
+    public void createModelBean_configModelKey() {
+        ModelBean modelBean = createModelBean(F_CONFIG_MODEL_KEY, "CONFIG");
         assertEquals("CONFIG", modelBean.getConfigModelKey());
     }
 
     @Test
-    public void testConfigModelKeyNullThenDefault() {
-        ModelBean modelBean = createModelBean(F_CONFIG_MODEL_KEY, null);
-        assertEquals(ModelConfigObject.class.getSimpleName(), modelBean.getConfigModelKey());
-    }
-
-    @Test
-    public void testExpose() {
-        ModelBean modelBean = createModelBean(F_EXPOSE, "\"WEB\"");
+    public void createModelBean_expose() {
+        ModelBean modelBean = createModelBean(F_EXPOSE, "WEB");
         assertEquals(Expose.WEB, modelBean.getExpose());
     }
 
     @Test
-    public void testModuleScope() {
-        ModelBean modelBean = createModelBean(F_MODULE_SCOPE, "\"MODULE\"");
-        assertEquals("MODULE", modelBean.getModuleScope());
+    public void createModelBean_moduleScope() {
+        ModelBean modelBean = createModelBean(F_MODULE_SCOPE, "MODULE_SCOPE");
+        assertEquals("MODULE_SCOPE", modelBean.getModuleScope());
     }
 
     @Test
-    public void testModule() {
-        ModelBean modelBean = createModelBean(F_MODULE, "\"MODULE\"");
+    public void createModelBean_module() {
+        ModelBean modelBean = createModelBean(F_MODULE, "MODULE");
         assertEquals("MODULE", modelBean.getModule());
     }
 
     @Test
-    public void testScope() {
+    public void createModelBean_scope() {
         List result = new ArrayList();
         result.add(Scope.DEV);
         result.add(Scope.PROD);
-        ModelBean modelBean = createModelBean(F_SCOPE, "\"DEV,PROD\"");
+        ModelBean modelBean = createModelBean(F_SCOPE, "[\\\"DEV\\\",\\\"PROD\\\"]");
         assertEquals(result, modelBean.getScope());
     }
 
     @Test
-    public void testAuthor() {
-        ModelBean modelBean = createModelBean(F_AUTHOR, "\"Author\"");
+    public void createModelBean_author() {
+        ModelBean modelBean = createModelBean(F_AUTHOR, "Author");
         assertEquals("Author", modelBean.getAuthor());
     }
 
     @Test
-    public void testCreationDate() {
-        ModelBean modelBean = createModelBean(F_CREATION_DATE, 1);
+    public void createModelBean_creationDate() {
+        ModelBean modelBean = createModelBean(F_CREATION_DATE, 1L);
         assertEquals(new Date(1L), modelBean.getCreationDate());
     }
 
     @Test
-    public void testId() {
-        ModelBean modelBean = createModelBean(F_ID, 1);
-        assertEquals(new Long(1L), modelBean.getId());
+    public void createModelBean_id() {
+        ModelBean modelBean = createModelBean(F_ID, Long.valueOf(1L));
+        assertEquals(Long.valueOf(1L), modelBean.getId());
     }
 
     @Test
-    public void testNaturalId() {
-        ModelBean modelBean = createModelBean(F_NATURAL_ID, "\"natural\"");
+    public void createModelBean_naturalId() {
+        ModelBean modelBean = createModelBean(F_NATURAL_ID, "natural");
         assertEquals("natural", modelBean.getNaturalId());
     }
 
